circleCI, readme pages, passing test

--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "bin": {
     "yahoo-finance": "bin/yahoo-finance.js"
   },
+  "scripts": {
+    "lint": "eslint",
+    "test": "jest",
+    "coverage": "jest --coverage"
+  },
   "dependencies": {
     "node-fetch": "^2.6.1"
   },
