--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "coverage": "jest --coverage"
   },
   "dependencies": {
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "eslint": "^7.18.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4"
   }
 }
