--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/github": "^7.2.0",
+    "@semantic-release/npm": "^7.0.10",
+    "@semantic-release/release-notes-generator": "^9.0.1",
     "@types/jest": "^26.0.20",
     "eslint": "^7.18.0",
     "jest": "^26.6.3",
+    "semantic-release": "^17.3.7",
     "ts-jest": "^26.4.4"
   }
 }
