--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -1,10 +1,14 @@
 branches:
-- master
-- next
+  - master
+  - next
 repositoryUrl: https://github.com/gadicc/node-yahoo-finance2
 plugins:
-- "@semantic-release/commit-analyzer"
-- "@semantic-release/release-notes-generator"
-- "@semantic-release/changelog"
-- "@semantic-release/npm"
-- "@semantic-release/github"
+  - "@semantic-release/commit-analyzer"
+  - "@semantic-release/release-notes-generator"
+  - - "@semantic-release/changelog"
+    - changelogFile: CHANGELOG.md
+  - - "@semantic-release/git"
+    - assets:
+      - CHANGELOG.md
+  - "@semantic-release/npm"
+  - "@semantic-release/github"
