--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@semantic-release/github": "^7.2.0",
     "@semantic-release/npm": "^7.0.10",
     "@semantic-release/release-notes-generator": "^9.0.1",
+    "@tsconfig/node12": "^1.0.7",
     "@types/jest": "^26.0.20",
     "eslint": "^7.18.0",
     "jest": "^26.6.3",
