fix(package): prepublish, typescript defs, exports; mv index;

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
   "compilerOptions": {
     "outDir": "./api",
     "allowJs": true,
-    "preserveConstEnums": true
+    "preserveConstEnums": true,
+    "declaration": true
   },
+
   "include": ["./src/**/*"]
 }
