--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "yahoo-finance2",
   "version": "0.0.1",
   "description": "JS API for Yahoo Finance",
-  "main": "index.js",
+  "main": "api/index.js",
+  "types": "api/index.d.ts",
   "repository": "https://github.com/gadicc/node-yahoo-finance2",
   "author": "Gadi Cohen <dragon@wastelands.net>",
   "license": "MIT",
@@ -12,8 +13,12 @@
   "scripts": {
     "lint": "eslint",
     "test": "jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "prepublishOnly": "tsc"
   },
+  "files": [
+    "api"
+  ],
   "dependencies": {
     "node-fetch": "^2.6.1",
     "typescript": "^4.1.3"
