--- a/package.json
+++ b/package.json
@@ -14,27 +14,31 @@
     "lint": "eslint",
     "test": "jest",
     "coverage": "jest --coverage",
-    "prepublishOnly": "tsc"
+    "generateSchema": "ts-json-schema-generator -p 'src/**/*.ts' -t '*' > schema.json",
+    "prepublishOnly": "tsc && generateSchema"
   },
   "files": [
-    "api"
+    "api",
+    "schema.json"
   ],
   "dependencies": {
+    "ajv": "^7.0.3",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
-    "eslint": "^7.18.0",
-    "jest": "^26.6.3",
-    "typescript": "^4.1.3",
-    "@tsconfig/node12": "^1.0.7",
-    "@types/jest": "^26.0.20",
-    "ts-jest": "^26.4.4",
-    "semantic-release": "^17.3.7",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.2.0",
     "@semantic-release/npm": "^7.0.10",
-    "@semantic-release/release-notes-generator": "^9.0.1"
+    "@semantic-release/release-notes-generator": "^9.0.1",
+    "@tsconfig/node12": "^1.0.7",
+    "@types/jest": "^26.0.20",
+    "eslint": "^7.18.0",
+    "jest": "^26.6.3",
+    "semantic-release": "^17.3.7",
+    "ts-jest": "^26.4.4",
+    "ts-json-schema-generator": "^0.83.2",
+    "typescript": "^4.1.3"
   }
 }
