--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "ajv": "^7.0.3",
+    "dot-prop": "^6.0.1",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
