chore(package): add ajv-formats

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "ajv": "^7.0.3",
+    "ajv-formats": "^1.5.1",
     "dot-prop": "^6.0.1",
     "node-fetch": "^2.6.1"
   },
