--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "jest",
     "coverage": "jest --coverage",
     "generateSchema": "ts-json-schema-generator -p 'src/**/*.ts' -t '*' > schema.json",
-    "prepublishOnly": "tsc && generateSchema"
+    "prepublishOnly": "tsc && yarn generateSchema"
   },
   "files": [
     "api",
