feat(env): multiple environments, browser entry point

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "yahoo-finance2",
   "version": "0.0.1",
   "description": "JS API for Yahoo Finance",
-  "main": "api/index.js",
-  "types": "api/index.d.ts",
+  "main": "api/index-node.js",
+  "types": "api/index-node.d.ts",
+  "browser": "api/index-browser.js",
   "repository": "https://github.com/gadicc/node-yahoo-finance2",
   "author": "Gadi Cohen <dragon@wastelands.net>",
   "license": "MIT",
