chore(package): add package.json keywords [skip ci]

--- a/package.json
+++ b/package.json
@@ -8,7 +8,21 @@
   "repository": "https://github.com/gadicc/node-yahoo-finance2",
   "author": "Gadi Cohen <dragon@wastelands.net>",
   "license": "MIT",
-  "bin": {
+  "keywords": [
+    "yahoo",
+    "finance",
+    "financial",
+    "data",
+    "stock",
+    "price",
+    "quote",
+    "historical",
+    "eod",
+    "end-of-day",
+    "client",
+    "library"
+  ],
+    "bin": {
     "yahoo-finance": "bin/yahoo-finance.js"
   },
   "scripts": {
