--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "client",
     "library"
   ],
-    "bin": {
+  "bin": {
     "yahoo-finance": "bin/yahoo-finance.js"
   },
   "scripts": {
     "lint": "eslint",
     "test": "jest",
     "coverage": "jest --coverage",
+    "test:ts": "tsc --noEmit",
     "generateSchema": "ts-json-schema-generator -p 'src/**/*.ts' -t '*' | node bin/modify-schema.js > schema.json",
     "prepublishOnly": "tsc && yarn generateSchema"
   },
