--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/jest": "26.0.20",
     "eslint": "7.19.0",
     "jest": "26.6.3",
+    "jest-tobetype": "^1.2.3",
     "oas-schema-walker": "1.1.5",
     "semantic-release": "17.3.7",
     "ts-jest": "26.5.0",
