chore(ci): remove quotes on codecov file variable substitution (#11)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,6 @@ jobs:
           path: coverage
 
       - codecov/upload:
-          file: "{{ coverage_report_filepath }}"
+          file: {{ coverage_report_filepath }}
 
       - run: yarn semantic-release
