chore(ci): fix codecov, last time? :pray: (#11)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,6 @@ jobs:
           path: coverage
 
       - codecov/upload:
-          file: coverage
+          file: './coverage/clover.xml'
 
       - run: yarn semantic-release
