chore(coverage): compare coverage-final.json vs clover.xml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,6 @@ jobs:
           path: coverage
 
       - codecov/upload:
-          file: './coverage/clover.xml'
+          file: './coverage/coverage-final.json'
 
       - run: yarn semantic-release
