--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,8 +1,18 @@
+root: true
 env:
   browser: true
   commonjs: true
   es2021: true
-extends: 'eslint:recommended'
+parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: 12
-rules: {}
+  tsconfigRootDir: '.'
+  project: './tsconfig.json'
+extends:
+  - 'eslint:recommended'
+  - 'plugin:@typescript-eslint/recommended'
+  # - 'plugin:@typescript-eslint/recommended-requiring-type-checking'
+plugins:
+  - '@typescript-eslint'
+rules:
+  "@typescript-eslint/no-explicit-any": "off"
