--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "yahoo-finance": "bin/yahoo-finance.js"
   },
   "scripts": {
-    "lint": "eslint",
+    "lint": "eslint . --ext .js,.ts",
     "test": "jest",
     "coverage": "jest --coverage",
     "test:ts": "tsc --noEmit",
@@ -51,13 +51,15 @@
     "@semantic-release/release-notes-generator": "9.0.1",
     "@tsconfig/node12": "1.0.7",
     "@types/jest": "26.0.20",
-    "eslint": "7.19.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
+    "eslint": "^7.19.0",
     "jest": "26.6.3",
     "jest-tobetype": "1.2.3",
     "oas-schema-walker": "1.1.5",
     "semantic-release": "17.3.8",
     "ts-jest": "26.5.1",
     "ts-json-schema-generator": "0.84.0",
-    "typescript": "4.1.4"
+    "typescript": "^4.1.4"
   }
 }
