--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
     "@typescript-eslint/eslint-plugin": "4.15.0",
     "@typescript-eslint/parser": "4.15.0",
     "eslint": "7.19.0",
+    "eslint-config-prettier": "7.2.0",
     "jest": "26.6.3",
     "jest-tobetype": "1.2.3",
     "oas-schema-walker": "1.1.5",
+    "prettier": "2.2.1",
     "semantic-release": "17.3.8",
     "ts-jest": "26.5.1",
     "ts-json-schema-generator": "0.84.0",
