--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,7 @@
 {
   "automerge": true,
-  "extends": [
-    "config:base"
-  ],
-  "ignoreDeps": [
-    "circleci/node"
-  ],
+  "extends": ["config:base"],
+  "ignoreDeps": ["circleci/node"],
   "major": {
     "automerge": false
   }
