chore(ci): yarn prettier --check . (#22)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,8 @@ jobs:
       # Check that schema is up-to-date
       - run: bin/schema-check.sh
 
+      - run: yarn prettier --check .
+
       # run tests!
       - run: yarn test --collectCoverage=true
 
