--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@typescript-eslint/parser": "4.15.2",
     "eslint": "7.20.0",
     "eslint-config-prettier": "8.1.0",
+    "globby": "^11.0.2",
     "jest": "26.6.3",
     "jest-tobetype": "1.2.3",
     "oas-schema-walker": "1.1.5",
