chore(fetch): convert to typescript; resolveJson; errors index

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "./api",
     "allowJs": true,
     "preserveConstEnums": true,
-    "declaration": true
+    "declaration": true,
+    "resolveJsonModule": true
   },
 
   "include": ["./src/**/*"],
