--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
   "dependencies": {
     "ajv": "^8.0.5",
     "ajv-formats": "^2.0.2",
-    "node-fetch": "^2.6.1",
-    "p-queue": "6.6.2"
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@semantic-release/changelog": "5.0.1",
