--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@tsconfig/node12/tsconfig.json",
 
   "compilerOptions": {
-    "outDir": "./api",
+    "moduleResolution": "node",
     "allowJs": true,
     "preserveConstEnums": true,
     "declaration": true,
