chore(esm): don't force engines while we still support CJS

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "client",
     "library"
   ],
-  "engines": {
+  "//engines//UNCOMMENT_WHEN_WE_DROP_CJS_SUPPORT": {
     "node": ">=12"
   },
   "bin": {
