--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "semantic-release": "17.4.2",
     "ts-jest": "26.5.6",
     "ts-json-schema-generator": "0.92.0",
+    "ts-node": "^9.1.1",
     "typescript": "4.2.4"
   }
 }
