--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@semantic-release/release-notes-generator": "9.0.2",
     "@tsconfig/node12": "1.0.7",
     "@types/jest": "26.0.23",
+    "@types/node-fetch": "^2.5.10",
     "@typescript-eslint/eslint-plugin": "4.22.1",
     "@typescript-eslint/parser": "4.22.1",
     "eslint": "7.26.0",
