chore(esm): package/jest/tsconfig bump deps, esm opts

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "JS API for Yahoo Finance",
   "type": "module",
-  "main": "dist/esm/index-node.js",
+  "main": "dist/cjs/index-node.js",
   "exports": "dist/esm/index-node.js",
   "types": "dist/esm/index-node.d.ts",
   "browser": "dist/esm/index-browser.js",
@@ -35,7 +35,7 @@
     "lint": "eslint . --ext .js,.ts",
     "schema": "ts-json-schema-generator -f tsconfig.json -p 'src/{modules,typings}/**/*.ts' -t '*' | node bin/schema-tweak.js > schema.json",
     "build": "yarn run build:esm && yarn run build:cjs",
-    "build:esm": "tsc --module es2015 --outDir dist/esm",
+    "build:esm": "tsc --module ES2020 --outDir dist/esm",
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "generateSchema": "yarn schema",
     "prepublishOnly": "yarn build && yarn generateSchema",
@@ -66,12 +66,12 @@
     "eslint": "7.26.0",
     "eslint-config-prettier": "8.3.0",
     "globby": "11.0.3",
-    "jest": "26.6.3",
+    "jest": "v27.0.0-next.8",
     "jest-tobetype": "1.2.3",
     "oas-schema-walker": "1.1.5",
     "prettier": "2.2.1",
     "semantic-release": "17.4.2",
-    "ts-jest": "26.5.6",
+    "ts-jest": "27.0.0-next.11",
     "ts-json-schema-generator": "0.92.0",
     "ts-node": "^9.1.1",
     "typescript": "4.2.4"
