--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 
   "compilerOptions": {
     "moduleResolution": "node",
+    "module": "ES2020",
     "allowJs": true,
     "preserveConstEnums": true,
     "declaration": true,
