use relative paths in package.json for main/exports/types/browser

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "description": "JS API for Yahoo Finance",
   "type": "module",
-  "main": "dist/cjs/index-node.js",
-  "exports": "dist/esm/index-node.js",
-  "types": "dist/esm/index-node.d.ts",
-  "browser": "dist/esm/index-browser.js",
+  "main": "./dist/cjs/src/index-node.js",
+  "exports": "./dist/esm/src/index-node.js",
+  "types": "./dist/esm/src/index-node.d.ts",
+  "browser": "./dist/esm/src/index-browser.js",
   "repository": "https://github.com/gadicc/node-yahoo-finance2",
   "author": "Gadi Cohen <dragon@wastelands.net>",
   "license": "MIT",
