--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,9 @@ jobs:
   build:
     docker:
       # https://circleci.com/developer/images/image/cimg/node
-      - image: cimg/node:12.22.1
+      #- image: cimg/node:12.22.1
+      #- currently we need this for dynamic import in module tests, ONLY.
+      - image: cimg/node:14.16.1
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
