--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,4 +54,7 @@ jobs:
       - codecov/upload:
           file: './coverage/coverage-final.json'
 
+      - run: yarn build
+      - run: yarn test:build
+
       - run: yarn semantic-release
