chore(json): transform json files into js modules (esm + cjs)

--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
     "coverage": "jest --coverage",
     "lint": "eslint . --ext .js,.ts",
     "schema": "ts-json-schema-generator -f tsconfig.json -p 'src/{modules,typings}/**/*.ts' -t '*' | node bin/schema-tweak.js > schema.json",
-    "build": "yarn run build:esm && yarn run build:cjs",
+    "build": "yarn run build:esm && yarn run build:cjs && yarn run build:post",
     "build:esm": "tsc --module es2020 --outDir dist/esm",
     "build:cjs": "tsc --module commonjs --outDir dist/cjs && sed -i 's/\"type\": \"module\",/\"type:\": \"commonjs\",/' dist/cjs/package.json",
+    "build:post": "bin/json-transform.sh",
     "generateSchema": "yarn schema",
     "prepublishOnly": "yarn build && yarn generateSchema",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
