--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "coverage": "yarn test --coverage",
     "lint": "eslint . --ext .js,.ts",
     "//schema": "ts-json-schema-generator -f tsconfig.json -p 'src/{modules/**/*.ts,lib/options.ts}' -t '*' | node bin/schema-tweak.js > schema.json",
-    "schema": "node --loader ts-node/esm bin/schema.js > schema.json",
+    "schema": "node --loader ts-node/esm scripts/schema.js > schema.json",
     "build": "yarn run build:esm && yarn run build:cjs && yarn run build:post",
     "build:esm": "tsc --module es2020 --outDir dist/esm",
     "build:cjs": "tsc --module commonjs --target es2015 --outDir dist/cjs && sed -i 's/\"type\": \"module\",/\"type:\": \"commonjs\",/' dist/cjs/package.json",
