--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "build": "yarn run build:esm && yarn run build:cjs && yarn run build:post",
     "build:esm": "tsc --module es2020 --outDir dist/esm",
     "build:cjs": "tsc --module commonjs --target es2015 --outDir dist/cjs && sed -i 's/\"type\": \"module\",/\"type:\": \"commonjs\",/' dist/cjs/package.json",
-    "build:post": "bin/json-transform.sh",
+    "build:post": "scripts/json-transform.sh",
     "generateSchema": "yarn schema",
     "prepublishOnly": "yarn build && yarn generateSchema && yarn build:post",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
