chore(dev): add ts-node moduleTypes workaround for jest.config.ts
Ref: https://github.com/facebook/jest/issues/11453

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,11 @@
   },
 
   "include": ["./src/**/*"],
-  "exclude": ["./src/**/*.spec.ts"]
+  "exclude": ["./src/**/*.spec.ts"],
+
+  "ts-node": {
+    "moduleTypes": {
+      "jest.config.ts": "cjs"
+    }
+  }
 }
