Revert "chore(tests): add --detectOpenHandles"
This reverts commit 717052d6c0c1d6242739aced51e1287ab63d03a5.

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "build:post": "scripts/json-transform.sh",
     "generateSchema": "yarn schema",
     "prepublishOnly": "yarn build && yarn generateSchema && yarn build:post",
-    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --detectOpenHandles",
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
     "test:ts": "tsc --noEmit",
     "test:esm": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js -c tests-modules/esm/jest.config.js tests-modules/esm/tests/*",
     "test:cjs": "node ./node_modules/jest/bin/jest.js -c tests-modules/cjs/jest.config.js tests-modules/cjs/tests/*",
