--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "schema.json"
   ],
   "dependencies": {
-    "ajv": "8.9.0",
-    "ajv-formats": "^2.1.1",
+    "ajv": "8.10.0",
+    "ajv-formats": "2.1.1",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
