--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "scripts": {
     "coverage": "yarn test --coverage",
-    "lint": "eslint . --ext .js,.ts",
+    "lint": "eslint . --ext .js,.ts --fix",
     "//schema": "ts-json-schema-generator -f tsconfig.json -p 'src/{modules/**/*.ts,lib/options.ts}' -t '*' | node bin/schema-tweak.js > schema.json",
     "schema": "node --loader ts-node/esm scripts/schema.js > schema.json",
     "build": "yarn run build:esm && yarn run build:cjs && yarn run build:post",
@@ -76,7 +76,11 @@
     "@typescript-eslint/eslint-plugin": "5.41.0",
     "@typescript-eslint/parser": "5.41.0",
     "eslint": "8.26.0",
+    "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jest": "27.1.3",
+    "eslint-plugin-prettier": "4.2.1",
     "globby": "13.1.2",
     "jest": "27.5.1",
     "jest-tobetype": "1.2.3",
