--- a/package.json
+++ b/package.json
@@ -59,9 +59,11 @@
     "schema.json"
   ],
   "dependencies": {
+    "@types/tough-cookie": "^4.0.2",
     "ajv": "8.10.0",
     "ajv-formats": "2.1.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "tough-cookie": "^4.1.2"
   },
   "devDependencies": {
     "@semantic-release/changelog": "6.0.3",
