--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "ajv": "8.10.0",
     "ajv-formats": "2.1.1",
     "node-fetch": "^2.6.1",
-    "tough-cookie": "^4.1.2"
+    "tough-cookie": "^4.1.2",
+    "tough-cookie-file-store": "^2.0.3"
   },
   "devDependencies": {
     "@semantic-release/changelog": "6.0.3",
