added prettier write command to build

--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "lint": "eslint . --ext .js,.ts",
     "//schema": "ts-json-schema-generator -f tsconfig.json -p 'src/{modules/**/*.ts,lib/options.ts}' -t '*' | node bin/schema-tweak.js > schema.json",
     "schema": "node --loader ts-node/esm scripts/schema.js > schema.json",
-    "build": "yarn run build:esm && yarn run build:cjs && yarn run build:post",
+    "build": "yarn prettier --write . && yarn run build:esm && yarn run build:cjs && yarn run build:post",
     "build:esm": "tsc --module es2020 --target es2019 --outDir dist/esm",
     "build:cjs": "tsc --module commonjs --target es2015 --outDir dist/cjs && sed 's/\"type\": \"module\",/\"type:\": \"commonjs\",/' dist/cjs/package.json > dist/cjs/package-changed.json && mv dist/cjs/package-changed.json dist/cjs/package.json",
     "build:post": "scripts/json-transform.sh",
     "generateSchema": "yarn schema",
-    "prepublishOnly": "yarn build && yarn generateSchema && yarn build:post",
+    "prepublishOnly": "yarn prettier --write . && yarn build && yarn generateSchema && yarn build:post && pwd",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
     "test:ts": "tsc --noEmit",
     "test:esm": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js -c tests-modules/esm/jest.config.js tests-modules/esm/tests/*",
