fix(schema): skip function types (not in js-schema), related fixes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "esModuleInterop": true
   },
 
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "./scripts/**/*"],
   "exclude": ["./src/**/*.spec.ts"],
 
   "ts-node": {
