--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lint": "eslint . --ext .js,.ts",
     "//schema": "ts-json-schema-generator -f tsconfig.json -p 'src/{modules/**/*.ts,lib/options.ts}' -t '*' | node bin/schema-tweak.js > schema.json",
     "schema": "node --loader ts-node/esm scripts/schema.js > schema.json",
+    "timeseries": "node --loader ts-node/esm scripts/timeseries.js",
     "build": "yarn run build:esm && yarn run build:cjs && yarn run build:post",
     "build:esm": "tsc --module es2020 --target es2019 --outDir dist/esm",
     "build:cjs": "tsc --module commonjs --target es2015 --outDir dist/cjs && sed 's/\"type\": \"module\",/\"type:\": \"commonjs\",/' dist/cjs/package.json > dist/cjs/package-changed.json && mv dist/cjs/package-changed.json dist/cjs/package.json",
@@ -72,6 +73,7 @@
     "@semantic-release/npm": "9.0.2",
     "@semantic-release/release-notes-generator": "10.0.3",
     "@tsconfig/node12": "12.1.1",
+    "@types/har-format": "^1.2.15",
     "@types/jest": "29.5.12",
     "@types/node-fetch": "2.6.11",
     "@typescript-eslint/eslint-plugin": "5.62.0",
