--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "@types/tough-cookie": "^4.0.2",
     "ajv": "8.10.0",
     "ajv-formats": "2.1.1",
+    "jest-fetch-mock": "^3.0.3",
+    "jest-fetch-mock-cache": "^1.4.0",
     "node-fetch": "^2.6.1",
     "tough-cookie": "^4.1.2",
     "tough-cookie-file-store": "^2.0.3"
