Add YFinance Typebox types + validation & coercion

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "schema.json"
   ],
   "dependencies": {
+    "@sinclair/typebox": "^0.32.27",
     "@types/tough-cookie": "^4.0.2",
     "ajv": "8.10.0",
     "ajv-formats": "2.1.1",
