--- a/package.json
+++ b/package.json
@@ -73,11 +73,11 @@
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "eslint": "8.57.0",
-    "eslint-config-prettier": "8.10.0",
+    "eslint-config-prettier": "^9.1.0",
     "globby": "13.2.2",
     "jest": "29.7.0",
     "jest-tobetype": "1.2.3",
-    "prettier": "2.8.8",
+    "prettier": "^3.3.3",
     "semantic-release": "19.0.5",
     "ts-jest": "29.1.2",
     "ts-node": "10.9.2",
