fix(imports): add import assertions required in node since 17.5.0.
We actually want the new `with` keyword (vs `assert`, except, it's
not recognized in older node versions, so, we need to continue to
use `assert` for the foreseeable future until all those old versions
are no longer maintained.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 
   "compilerOptions": {
     "moduleResolution": "node",
-    "module": "es2020",
+    "module": "esnext",
     "target": "es2020",
     "outDir": "dist/default",
     "allowJs": true,
