--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "schema": "node --loader ts-node/esm scripts/schema.js > schema.json",
     "timeseries": "node --loader ts-node/esm scripts/timeseries.js",
     "build": "yarn run build:esm && yarn run build:cjs && yarn run build:post",
-    "build:esm": "tsc --module es2020 --target es2019 --outDir dist/esm",
+    "build:esm": "tsc --module esnext --target es2019 --outDir dist/esm",
     "build:cjs": "tsc --module commonjs --target es2015 --outDir dist/cjs && sed 's/\"type\": \"module\",/\"type:\": \"commonjs\",/' dist/cjs/package.json > dist/cjs/package-changed.json && mv dist/cjs/package-changed.json dist/cjs/package.json",
     "build:post": "scripts/json-transform.sh",
     "generateSchema": "yarn schema",
