--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "tough-cookie-file-store": "^2.0.3"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-import-attributes": "^7.25.6",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "9.0.2",
     "@semantic-release/git": "10.0.1",
