--- a/package.json
+++ b/package.json
@@ -60,13 +60,14 @@
     "tough-cookie-file-store": "^2.0.3"
   },
   "devDependencies": {
-    "@babel/plugin-syntax-import-attributes": "^7.25.6",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "9.0.2",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/github": "8.1.0",
     "@semantic-release/npm": "9.0.2",
     "@semantic-release/release-notes-generator": "10.0.3",
+    "@swc/core": "^1.7.26",
+    "@swc/helpers": "^0.5.13",
     "@tsconfig/node12": "12.1.3",
     "@types/har-format": "^1.2.15",
     "@types/jest": "29.5.12",
