fix(pkg): drop ts-jest, use @swc-jest, { keepImportAssertions: false }

--- a/.swcrc
+++ b/.swcrc
@@ -1,10 +1,11 @@
 {
   "jsc": {
     "parser": {
+      "syntax": "typescript",
       "importAssertions": true
     },
     "experimental": {
-      "keepImportAssertions": true
+      "keepImportAssertions": false
     }
   }
 }
