--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "library"
   ],
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   },
   "bin": {
     "yahoo-finance": "bin/yahoo-finance.js"
@@ -68,6 +68,7 @@
     "@semantic-release/release-notes-generator": "10.0.3",
     "@swc/core": "^1.7.26",
     "@swc/helpers": "^0.5.13",
+    "@swc/jest": "^0.2.36",
     "@tsconfig/node12": "12.1.3",
     "@types/har-format": "^1.2.15",
     "@types/jest": "29.5.12",
@@ -81,7 +82,6 @@
     "jest-tobetype": "1.2.3",
     "prettier": "^3.3.3",
     "semantic-release": "19.0.5",
-    "ts-jest": "29.1.2",
     "ts-node": "10.9.2",
     "typescript": "5.4.3"
   }
