--- a/package.json
+++ b/package.json
@@ -77,14 +77,14 @@
     "@swc/jest": "^0.2.36",
     "@tsconfig/node12": "12.1.3",
     "@types/har-format": "^1.2.15",
-    "@types/jest": "29.5.12",
+    "@types/jest": "^29.5.13",
     "@types/node-fetch": "2.6.11",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^10.0.1",
     "globby": "13.2.2",
-    "jest": "29.7.0",
+    "jest": "^29.7.0",
     "jest-tobetype": "1.2.3",
     "oas-schema-walker": "1.1.5",
     "prettier": "^3.4.2",
