chore(deps): bump typebox from 0.32.27 to 0.33.7; .8+ has issues
From 0.33.8 - 0.33.12 (latest at time of writing), there's an issue
with `RawDateObject.Encode()` types in `yahooFinanceTypes.ts`, need
to investigate further.   TODO.

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "dist"
   ],
   "dependencies": {
-    "@sinclair/typebox": "^0.32.27",
+    "@sinclair/typebox": "0.33.7",
     "@types/tough-cookie": "^4.0.2",
     "node-fetch": "^2.6.1",
     "tough-cookie": "^4.1.2",
