fix(json): keep assertions; use "with"; up min node ver (closes #800)

--- a/.swcrc
+++ b/.swcrc
@@ -5,7 +5,7 @@
       "importAssertions": true
     },
     "experimental": {
-      "keepImportAssertions": false
+      "keepImportAssertions": true
     }
   }
 }
