--- a/.swcrc
+++ b/.swcrc
@@ -5,7 +5,7 @@
       "importAssertions": true
     },
     "experimental": {
-      "keepImportAssertions": true
+      "keepImportAssertions": false
     }
   }
 }
