--- a/package.json
+++ b/package.json
@@ -79,12 +79,12 @@
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "eslint": "8.57.0",
-    "eslint-config-prettier": "8.10.0",
+    "eslint-config-prettier": "^10.0.1",
     "globby": "13.2.2",
     "jest": "29.7.0",
     "jest-tobetype": "1.2.3",
     "oas-schema-walker": "1.1.5",
-    "prettier": "2.8.8",
+    "prettier": "^3.4.2",
     "semantic-release": "19.0.5",
     "ts-jest": "29.1.2",
     "ts-json-schema-generator": "1.5.0",
