--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
   ],
   "dependencies": {
     "@types/tough-cookie": "^4.0.2",
-    "ajv": "8.17.1",
-    "ajv-formats": "2.1.1",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "tough-cookie": "^4.1.2",
     "tough-cookie-file-store": "^2.0.3"
   },
