--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,9 @@ jobs:
       # Check for TypeScript errors
       - run: yarn test:ts
 
+      # Check that schema is up-to-date
+      - run: scripts/schema-check.sh
+
       - run: yarn prettier --check src tests tests-modules
 
       # run tests!
