--- a/deno.json
+++ b/deno.json
@@ -7,8 +7,10 @@
   },
   "exports": "./src/index.ts",
   "imports": {
+    "@gadicc/fetch-mock-cache": "jsr:@gadicc/fetch-mock-cache@^2.1.0",
     "@std/expect": "jsr:@std/expect@^1.0.13",
     "@std/testing": "jsr:@std/testing@^1.0.9",
+    "fetch-mock-cache": "npm:fetch-mock-cache@^2.1.0",
     "json-schema": "npm:json-schema@^0.4.0",
     "oas-schema-walker": "npm:oas-schema-walker@^1.1.5",
     "tough-cookie": "npm:tough-cookie@^5.1.1",
