--- a/deno.json
+++ b/deno.json
@@ -8,7 +8,9 @@
   "exports": "./src/index.ts",
   "imports": {
     "@gadicc/fetch-mock-cache": "jsr:@gadicc/fetch-mock-cache@^2.1.0",
+    "@jest/types": "npm:@jest/types@^29.6.3",
     "@std/expect": "jsr:@std/expect@^1.0.13",
+    "@std/fmt": "jsr:@std/fmt@^1.0.5",
     "@std/testing": "jsr:@std/testing@^1.0.9",
     "fetch-mock-cache": "npm:fetch-mock-cache@^2.1.0",
     "json-schema": "npm:json-schema@^0.4.0",
