--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,14 +4,15 @@
 #
 version: 2.1
 orbs:
-  codecov: codecov/codecov@4.2.0
+  codecov: codecov/codecov@5.2.1
 jobs:
   build:
     docker:
       # https://circleci.com/developer/images/image/cimg/node
       #- image: cimg/node:12.22.1
       #- currently we need this for dynamic import in module tests, ONLY.
-      - image: cimg/node:20.18.3
+      # - image: cimg/node:20.18.3
+      - image: denoland/deno:2.1.0
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -23,40 +24,39 @@ jobs:
     working_directory: ~/repo
 
     steps:
+      - run: apt-get update
+      - run: apt install -qq -y curl gpg git ssh
+
       - checkout
 
       # Download and cache dependencies
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "package.json" }}
+            - deno.lock-{{ checksum "deno.lock" }}
             # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
+            - deno.lock-
 
-      - run: yarn install
+      - run: deno install
 
       - save_cache:
           paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+            - ~/.cache/deno
+          key: deno.lock-{{ checksum "deno.lock" }}
 
-      # Check for TypeScript errors
-      - run: yarn test:ts
-
-      # Check that schema is up-to-date
-      - run: scripts/schema-check.sh
-
-      - run: yarn prettier --check src tests tests-modules
+      # Check that schema is up-to-date XXX TODO
+      # - run: scripts/schema-check.sh
 
       # run tests!
-      - run: yarn test --collectCoverage=true
+      - run: deno test -A --coverage
 
-      - store_artifacts:
-          path: coverage
+      # - store_artifacts:
+      #    path: coverage
 
+      - run: deno coverage --lcov ./coverage > coverage.lcov
       - codecov/upload:
-          file: './coverage/coverage-final.json'
+          files: "./coverage.lcov"
 
-      - run: yarn build
-      - run: yarn test:build
+      #- run: yarn build
+      #- run: yarn test:build
 
-      - run: yarn semantic-release
+      #- run: yarn semantic-release
