chore(cli): mod for deno. not sure how to best install globally TODO

--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,8 @@
   "name": "@gadicc/yahoo-finance2",
   "version": "0.0.1",
   "tasks": {
+    "cli": "deno run -A bin/yahoo-finance.ts",
+    "install-cli": "deno install -A --global -n yahoo-finance npm:yahoo-finance/bin/yahoo-finance.ts",
     "schema": "deno run --allow-read --allow-write --allow-env scripts/schema.ts > schema.json",
     "devTODO": "deno run --watch main.ts"
   },
