--- a/deno.json
+++ b/deno.json
@@ -6,17 +6,19 @@
     "install-cli": "deno install -A --global -n yahoo-finance npm:yahoo-finance/bin/yahoo-finance.ts",
     "schema": "deno run --allow-read --allow-write --allow-env scripts/schema.ts > schema.json",
     "test": "deno test -A",
+    "build:npm": "deno run -A scripts/build_npm.ts",
     "devTODO": "deno run --watch main.ts"
   },
   "exports": "./src/index.ts",
   "imports": {
-    "@gadicc/fetch-mock-cache": "jsr:@gadicc/fetch-mock-cache@^2.1.0",
+    "@deno/dnt": "jsr:@deno/dnt@^0.41.3",
+    "@gadicc/fetch-mock-cache": "jsr:@gadicc/fetch-mock-cache@^2.1.3",
     "@jest/types": "npm:@jest/types@^29.6.3",
     "@std/expect": "jsr:@std/expect@^1.0.13",
     "@std/fmt": "jsr:@std/fmt@^1.0.5",
     "@std/testing": "jsr:@std/testing@^1.0.9",
     "@types/json-schema": "npm:@types/json-schema@^7.0.15",
-    "fetch-mock-cache": "npm:fetch-mock-cache@^2.1.0",
+    "fetch-mock-cache": "npm:fetch-mock-cache@^2.1.3",
     "jest-get-type": "npm:jest-get-type@^29.6.3",
     "json-schema": "npm:json-schema@^0.4.0",
     "oas-schema-walker": "npm:oas-schema-walker@^1.1.5",
