fix(release): convert to mjs, use npm dir, drop changelog

--- a/deno.json
+++ b/deno.json
@@ -22,6 +22,7 @@
     "jest-get-type": "npm:jest-get-type@^29.6.3",
     "json-schema": "npm:json-schema@^0.4.0",
     "oas-schema-walker": "npm:oas-schema-walker@^1.1.5",
+    "semantic-release": "npm:semantic-release@^24.2.3",
     "tough-cookie": "npm:tough-cookie@^5.1.1",
     "tough-cookie-file-store": "npm:tough-cookie-file-store@^2.0.3",
     "ts-json-schema-generator": "npm:ts-json-schema-generator@1.5.1"
